--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ p {
   font-size: 20px;
   text-decoration: none;
   padding-left: 10px;
-  padding-top: px;
+  padding-top: 0px;
 	background: none;
 	color: #80925A;
 	border: none;
