--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ p {
   margin: 0 auto;
 }
 
-.button1, input[type=submit] {
+.button1 {
   background-color: #FBEFD6;
   border: none;
   color: #2B2E30;
@@ -104,6 +104,27 @@ p {
   font-weight: 500;
   font-style: normal;
   border-radius: 50px;
+  -webkit-appearance: none;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+  background-color: #FBEFD6;
+  border: none;
+  color: #2B2E30;
+  padding: 18px 22px;
+  text-align: center;
+  margin: 10px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.3s;
+  font-family: interstate, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  border-radius: 50px;
+  -webkit-appearance: none;
 }
 
 .button2 {
