--- a/index.css
+++ b/index.css
@@ -80,34 +80,11 @@ p {
 
 .mail {
   width: 550px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding-top: 45px;
   margin: 0 auto;
 }
 
-.button1 {
-  background-color: #FBEFD6;
-  border: none;
-  color: #2B2E30;
-  padding: 18px 22px;
-  text-align: center;
-  margin: 10px;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  cursor: pointer;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.3s;
-  font-family: interstate, sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  border-radius: 50px;
-  -webkit-appearance: none;
-}
-
-input[type=button], input[type=submit], input[type=reset] {
+.button1, input[type=submit] {
   background-color: #FBEFD6;
   border: none;
   color: #2B2E30;
